[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/inputs/RotationBasicInput.gd" id="1_script"]

[node name="RotationBasicInput" type="VBoxContainer"]
script = ExtResource("1_script")

[node name="ModeLabel" type="Label" parent="."]
layout_mode = 2
text = "Choose rotation angle:"
horizontal_alignment = 1

[node name="AngleButtons" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Neg90Button" type="Button" parent="AngleButtons"]
layout_mode = 2
text = "-90째"
custom_minimum_size = Vector2(70, 40)

[node name="Pos90Button" type="Button" parent="AngleButtons"]
layout_mode = 2
text = "+90째"
custom_minimum_size = Vector2(70, 40)

[node name="Pos180Button" type="Button" parent="AngleButtons"]
layout_mode = 2
text = "180째"
custom_minimum_size = Vector2(70, 40)

[node name="NotationLabel" type="Label" parent="."]
layout_mode = 2
text = "R(90째)"
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)
